Applying and testing fixes on SVG images that are not showing.

--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -53,7 +53,7 @@ $nav-color-dark-darker: #222;
 			max-height: 2em;
 
 			// In case the logo is SVG, add this class
-			&.logo_is-SVG { max-height: 2em; }
+			&.logo--is-SVG { max-height: 2em; }
 		}
 	}
 	
